Added feature to see all previous searches

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,6 @@ http://www.templatemo.com/tm-489-strategy
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet">
 
-
     <style>
         .center {
             display: block;
@@ -180,7 +179,7 @@ http://www.templatemo.com/tm-489-strategy
             </table>
 
             <br><hr><br>
-            <h2 class="tm-section-3-title">Resources Total</h2>
+            <h2 class="tm-section-3-title">Resources Total <a tabindex="0" id="previousSearches" role="button" class="btn btn-link popover-dismiss" data-container="body" data-trigger="focus" data-toggle="popover" data-placement="top" data-content="No Previous Searches">Show Previous Searches</a></h2>
             <table id="totalTable" class="display" style="width:100%">
                 <thead>
                 <tr>
@@ -259,6 +258,7 @@ http://www.templatemo.com/tm-489-strategy
         <script src="js/bootstrap.min.js"></script>                 <!-- Bootstrap js (v4-alpha.getbootstrap.com/) -->
         <script src="js/hero-slider-script.js"></script>            <!-- Hero slider (https://codyhouse.co/gem/hero-slider/) -->
         <script src="js/jquery.touchSwipe.min.js"></script>         <!-- http://labs.rampinteractive.co.uk/touchSwipe/demos/ -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/js/bootstrap4-toggle.min.js"></script>
         <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
         <script>
