Minor Text Change

--- a/public/oshiDownload.html
+++ b/public/oshiDownload.html
@@ -88,7 +88,7 @@
                 <div class="tm-slide-content-div" style="margin-right: 50% !important;">
                     <!--<i class="icon icon-fo-warframe tm-slide-icon"></i>-->
                     <img src="img/oshi/icon.png" class="center">
-                    <h2 class="text-uppercase">Osho & Osha</h2>
+                    <h2 class="text-uppercase">Team Oshi</h2>
                     <p class="m-b-mid">Gif Stealing App</p>
 
                     <form id="first-form">
@@ -96,7 +96,7 @@
                             <input name="url" type="text" class="form-control center-block tm-max-w-400" id="url" placeholder="Type the Line URL..." required>
                         </div>
 
-                        <button id="firstFormBtn" type="submit" class="cd-btn btnAnimated">Search</button>
+                        <button id="firstFormBtn" type="submit" class="cd-btn btnAnimated">Download</button>
                     </form>
 
                     <div class="alert alert-warning alertMessage" style="margin-top: 25px; display: none;" role="alert">
